# AMF-PSM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE.txt  README.md  SHA256SUMS  anatomical-market-framework  pyproject.toml
.github/: mlc-config.json
.github/workflows/: ci.yml  integrity.yml
examples/: equity_market.py  liquidity_shock.py  sample_market.json
src/amf/: __init__.py  cli.py  diagnostics.py  errors.py  graph.py  market.py  models.py  report.py  simulation.py  systems.py
tests/: conftest.py
tests/integration/: test_cli.py  test_end_to_end.py
tests/unit/: test_diagnostics.py  test_graph.py  test_market.py  test_models.py  test_non_trading_boundary.py  test_report.py  test_simulation.py  test_systems.py
